--- a/platform/stack/packages/observability/headlamp/manifests/install.yaml
+++ b/platform/stack/packages/observability/headlamp/manifests/install.yaml
@@ -14,15 +14,6 @@ metadata:
     app.kubernetes.io/version: "0.38.0"
     app.kubernetes.io/managed-by: Helm
 ---
-# Source: headlamp/templates/secret.yaml
-apiVersion: v1
-kind: Secret
-metadata:
-  name: oidc
-  namespace: adhar-system
-type: Opaque
-data:
----
 # Source: headlamp/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -109,10 +100,26 @@ spec:
           imagePullPolicy: IfNotPresent
           
           env:
+            - name: OIDC_CLIENT_ID
+              value: headlamp
+            - name: OIDC_ISSUER_URL
+              value: https://adhar.localtest.me/keycloak/realms/adhar
+            - name: OIDC_SCOPES
+              value: openid,profile,email,groups
+            - name: OIDC_CALLBACK_URL
+              value: https://headlamp.adhar.localtest.me/oidc-callback
           args:
             - "-in-cluster"
             - "-plugins-dir=/headlamp/plugins"
             # Check if externalSecret is disabled
+            # Check if clientID is non empty either from env or oidc.config
+            - "-oidc-client-id=$(OIDC_CLIENT_ID)"
+            # Check if issuerURL is non empty either from env or oidc.config
+            - "-oidc-idp-issuer-url=$(OIDC_ISSUER_URL)"
+            # Check if scopes are non empty either from env or oidc.config
+            - "-oidc-scopes=$(OIDC_SCOPES)"
+            # Check if callbackURL is non empty either from env or oidc.config
+            - "-oidc-callback-url=$(OIDC_CALLBACK_URL)"
           ports:
             - name: http
               containerPort: 4466
