--- a/platform/stack/packages/observability/headlamp/manifests/secret.yaml
+++ b/platform/stack/packages/observability/headlamp/manifests/secret.yaml
@@ -3,6 +3,8 @@ kind: ExternalSecret
 metadata:
   name: headlamp-oidc
   namespace: adhar-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "50"
 spec:
   secretStoreRef:
     name: keycloak
@@ -12,7 +14,11 @@ spec:
     name: headlamp-oidc
     template:
       data:
-        HEADLAMP_CLIENT_SECRET: "{{ .HEADLAMP_CLIENT_SECRET }}"
+        # Headlamp OIDC configuration - these env vars are used by Headlamp
+        clientID: "headlamp"
+        clientSecret: "{{ .HEADLAMP_CLIENT_SECRET }}"
+        issuerURL: "https://adhar.localtest.me/keycloak/realms/adhar"
+        scopes: "openid,profile,email,groups"
   data:
     - secretKey: HEADLAMP_CLIENT_SECRET
       remoteRef:
